--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ DATABASE_URL="mongodb://localhost:27017/secondary?replicaSet={disable,prefer,req
 PORT=5001
 EMAIL=pdlbibash77@gmail.com
 PASSWORD=wrnwdjfdzdueyopl
+MONGO_URL=mongodb://localhost/secondary
