--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -35,6 +36,7 @@
     "argon2": "^0.30.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cypress": "^10.11.0",
     "ejs": "^3.1.8",
     "mongoose": "^6.7.0",
     "nodemailer": "^6.8.0",
