--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -32,15 +33,20 @@
     "@prisma/client": "^4.4.0",
     "@types/ejs": "^3.1.1",
     "@types/nodemailer": "^6.4.6",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "argon2": "^0.30.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cypress": "^10.11.0",
     "ejs": "^3.1.8",
+    "express-session": "^1.17.3",
     "mongoose": "^6.7.0",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
